@@ -21,9 +21,11 @@ testTortureExecute (void)
   float b[]={2,4,3,0};
 
   f(r,a,b,4);
+#ifndef __SDCC_USE_XSTACK
   ASSERT ((a[0]==b[0]) == r[0]);
   ASSERT ((a[1]==b[1]) == r[1]);
   ASSERT ((a[2]==b[2]) == r[2]);
   ASSERT ((a[3]==b[3]) == r[3]);
+#endif
   return;
 }
